provarAnt/00D190000000ZY2EAM/objects/Spotlights__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Spotlights</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Spotlights Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spotlights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>